# grid-fit

./: .flake8  .gitignore  .pre-commit-config.yaml  404.html  CMakeLists.txt  DEV.md  MAKEFILE.md  Makefile  README.md  TODO.md  full_factorial_analysis.py  index.html  install.sh  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: docs.yml  test.yml
R/: DESCRIPTION  NAMESPACE  RcppExports.R
R/R/: RcppExports.R
R/src/: Makevars  RcppExports.cpp  alcraft_matrices.h  gridfit.h  interp.cpp
R/tests/: testthat.R
benchmarking/: index.html
benchmarks/: benchmark.sh  benchmark_trilinear.py  scratch3_trilinear.py  scratch_trilinear_corners.py  sysinfo.py
bindings/: index.html
dev/new_class/: index.html
development/: index.html
docs/: benchmarking.md  bindings.md  development.md  index.md
docs/dev/: new_class.md
examples/R/: example_interp.R  example_trilinear.R
examples/bash/: interp.sh
examples/cpp/: README.md  example_interp  example_interp.cpp  example_trilinear  example_trilinear.cpp
examples/python/: example_interp.py  example_trilinear.py
include/: gridfit.h  interp.h
python/: setup.py
python/gridfit/: __init__.py  interp_py.cpp  test_interp.py
search/: search_index.json
src/: gridfit.cpp  interp.cpp  invariant_vandermonde_deg2x2x2.cpp  invariant_vandermonde_deg3x3x3.cpp
tests/R/: test_interp.R  test_trilinear.R
tests/cpp/: CMakeLists.txt  README.md  test_interp.cpp
tests/python/: test_interp.py  test_trilinear.py
tools/: invariantmaker.py  make_benchmark.py  permute_trilinear_matrix.py
